# xsmeteo

./: .coverage  .gitignore  .pre-commit-config.yaml  API-COVERAGE.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: python-publish.yml
examples/: demo.py
src/xsmeteo/: __init__.py  py.typed
src/xsmeteo/client/: __init__.py  async_client.py  sync_client.py
src/xsmeteo/core/: __init__.py  config.py  http_base.py  rate_limiter.py
src/xsmeteo/exceptions/: __init__.py  errors.py
src/xsmeteo/models/: __init__.py  air_quality.py  base.py  climate.py  common.py  elevation.py  ensemble.py  flood.py  forecast.py  geocoding.py  historical.py  marine.py
src/xsmeteo/services/: __init__.py  air_quality.py  climate.py  common.py  elevation.py  ensemble.py  flood.py  forecast.py  geocoding.py  historical.py  marine.py
tests/unit/: test_async_client.py  test_core.py  test_rate_limiter.py  test_services.py  test_sync_client.py
