[project]
name = "xsmeteo"
version = "0.1.0"
description = "High-performance, strictly typed Python wrapper for Open-Meteo API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["msgspec>=0.18.6", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "PL", "RUF", "SIM", "TCH", "TID"]
ignore = [
    "PLR0913", # Too many arguments - required for API wrappers with many optional params
    "PLR2004", # Magic values - HTTP status codes are self-documenting
    "PLR0402", # Allow module imports with alias (user strictly forbids 'from' imports)
]

[tool.ruff.lint.isort]
known-first-party = ["xsmeteo"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "nox>=2025.11.12",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "types-requests",
    "pytest-asyncio>=0.23.0",
]
